automatic namespace registration. Because it is broken and completely wrong in the first place it 
is disabled if possible. This improves performance, too.

- Changed: XPath expression do not register the namespaces of the context element if possible.
           This should improve performance and avoid conflicts.
- Changed: Tests now compatible to PHPUnit 3.5
- Added: FluentDOM::$attr property access for xml attributes
- Added: FluentDOM::$css property access to the css option in the style attribute
- Added: FluentDOM::$data property access to HTML 5 data attributes
- Added: FluentDOM::data() read/write HTML 5 data attributes
- Added: FluentDOM::removeData() remove HTML 5 data attributes
- Added: FluentDOM::hasData() check if an element has HTML 5 data attributes
- Added: FluentDOM::reverse() reverse the order of the matched nodes.

Version 4.0:

This version has been restructured because the class had grown to large. The new structure allows
better testing and inheritance. 

It brings compatiblity to the jQuery 1.4 API changes. A callback argument is supported by many
methods. 

- Implemented: FluentDOMLoader implementations now return a DOMNode or NULL,
               DOMDocument inherits from DOMNode 
- Implemented: make the $contentType argument of FluentDOMLoader an reference,
               so the loader can change it, set the changed version
- Changed: Moved source files into subdirectory src
- Changed: Splitting changelog.txt from readme.txt
- Added: FluentDOMHighlighter example
- Added: FluentDOMCore::namespace(), register namespaces for xpath expressions
- Added: FluentDOMCore::unique(), sort an array of dom nodes and remove duplicates
- Implemented: FluentDOM::add() now supports a xml snippet, an expression with an optional context
               attribute or any kind of usable objects, nodes from other documents will be imported
- Removed: FluentDOM::node() functionality now covered by add()
- Added: FluentDOMCore::evaluate()